@startuml
' ==========================================================
' Class Diagram – US2.2.2 (Register and Update Vessel Records)
' Author: Jorge Ubaldo Rodrigues
' Context: Port Management – Vessel Registration and Maintenance
' ==========================================================

skinparam monochrome true
skinparam shadowing false
hide circle

title US2.2.2 – Class Diagram (Vessel Management)

' ==========================================================
' DOMAIN LAYER
' ==========================================================
package "Domain" {

  class Vessel {
    - ImoNumber ImoNumber
    - string Name
    - string Owner
    - VesselTypeId VesselTypeId
    + UpdateName(string)
    + UpdateOwner(string)
    + ToString() : string
  }

  class VesselId {
    - Guid Value
    + AsGuid() : Guid
  }

  class ImoNumber {
    - string Value
    + ToString() : string
  }

  class VesselTypeId {
    - Guid Value
    + AsGuid() : Guid
  }

  class BusinessRuleValidationException
}

' ==========================================================
' DATA TRANSFER OBJECTS (DTOs)
' ==========================================================
package "DTOs" {
  class CreatingVesselDto {
    + string ImoNumber
    + string Name
    + string Owner
    + Guid VesselTypeId
  }

  class UpdatingVesselDto {
    + string? Name
    + string? Owner
  }

  class VesselDto {
    + Guid Id
    + string ImoNumber
    + string Name
    + string Owner
    + Guid VesselTypeId
  }
}

' ==========================================================
' APPLICATION LAYER
' ==========================================================
package "Application" {
  interface IVesselService {
    + GetAllAsync() : List<VesselDto>
    + GetByIdAsync(VesselId) : VesselDto
    + GetByImoNumberAsync(string) : VesselDto
    + GetByNameAsync(string) : List<VesselDto>
    + GetByOwnerAsync(string) : List<VesselDto>
    + GetFilterAsync(string?, string?, string?, string?) : List<VesselDto>
    + CreateAsync(CreatingVesselDto) : VesselDto
    + PatchByImoAsync(string, UpdatingVesselDto) : VesselDto
  }

  class VesselService implements IVesselService {
  }

  class VesselFactory {
    + CreateVessel(CreatingVesselDto) : Vessel
  }

  class VesselMapper {
    + ToDto(Vessel) : VesselDto
    + ToEntity(CreatingVesselDto) : Vessel
  }
}

' ==========================================================
' INFRASTRUCTURE LAYER
' ==========================================================
package "Infrastructure" {
  interface IVesselRepository {
    + GetAllAsync() : List<Vessel>
    + GetByIdAsync(VesselId) : Vessel
    + GetByImoNumberAsync(ImoNumber) : Vessel?
    + GetByNameAsync(string) : List<Vessel>
    + GetByOwnerAsync(string) : List<Vessel>
    + GetFilterAsync(string?, ImoNumber?, string?, string?) : List<Vessel>
    + AddAsync(Vessel)
  }

  class VesselRepository implements IVesselRepository {
  }

  interface IVesselTypeRepository {
    + GetByIdAsync(VesselTypeId) : VesselType
  }

  class VesselTypeRepository implements IVesselTypeRepository {
  }

  interface IUnitOfWork {
    + CommitAsync()
  }

  class UnitOfWork implements IUnitOfWork {
  }
}

' ==========================================================
' PRESENTATION LAYER (API)
' ==========================================================
package "Presentation" {
  class VesselController {
    + GetAll() : List<VesselDto>
    + GetById(Guid) : VesselDto
    + GetByImo(string) : VesselDto
    + GetByName(string) : List<VesselDto>
    + GetByOwner(string) : List<VesselDto>
    + GetFilter(string?, string?, string?, string?) : List<VesselDto>
    + Create(CreatingVesselDto) : VesselDto
    + PatchByImo(string, UpdatingVesselDto) : VesselDto
  }
}

' ==========================================================
' CROSS-CUTTING CONCERNS
' ==========================================================
package "Cross-cutting" {
  interface ILogger<T> {
    + LogInformation(string, params)
    + LogWarning(string, params)
    + LogError(string, params)
  }
}

' ==========================================================
' RELATIONSHIPS
' ==========================================================
Vessel "1" *-- "1" VesselId
Vessel "1" *-- "1" ImoNumber
Vessel --> VesselTypeId : references >

VesselService --> IVesselRepository
VesselService --> IVesselTypeRepository
VesselService --> IUnitOfWork
VesselService --> VesselFactory
VesselService --> VesselMapper
VesselService --> ILogger
VesselRepository --> Vessel
VesselFactory --> Vessel
VesselMapper --> Vessel
VesselMapper --> VesselDto
VesselController --> IVesselService
VesselController --> ILogger

@enduml
